Fix java 25 issue and updated c4 graph